Table user_account {
  id long [primary key]
}
Table client {
    id long [primary key]
    organization_id long [not null, unique]
    project_id long
}

Table organization {
    id long [primary key]
    organization_name integer
    organization_number integer
    organization_industry_type varchar
    bank_account_number integer
}

Table project {
    id long [primary key]
    client_id long
    project_name varchar
    project_start_date timestamp
    project_end_date timestamp
}

Table person {
    id long [primary key]
    first_name varchar
    middle_name integer
    last_name varchar
    date_of_birth timestamp
    social_security_number varchar
    gender varchar
    marital_status varchar
}

Table address {
    id long [primary key]
    street_name varchar
    street_number integer
    street_number_prefix varchar
    post_code varchar
    city varchar
    country varchar
    country_code varchar
}

Table contact_info {
    id long [primary key]
    mobile_number_country_code varchar
    mobile_number varchar
    email_address varchar
}

Table invoice {
    id long [primary key]
    timesheet_id long
    client_id long
    invoice_number integer
    billing_date timestamp
    invoice_status varchar
    billing_period_start_date timestamp
    billing_period_end_date timestamp
    amount double
}

Table invoice_attachment {
    id long [primary key]
    invoice_id long
    attachment_file_name varchar
    attachment_type varchar
    attachment_file_type varchar
    attachment_file_content blob
}

Table timesheet {
    id long [primary key]
    user_account_id long
    year integer
    month integer
    from_date timestamp
    to_date timestamp
}

Table timesheet_entry {
    id long [primary key]
    timesheet_id long
    project_id long
    workday_date timestamp
    start_time timestamp
    end_time timestamp
}

Table timesheet_summary {
    id long [primary key]
    timesheet_id long
    year integer
    week_in_year integer
    from_date timestamp
    to_date timestamp
    total_worked_days integer
    total_worked_hours double
}

// one to one
Ref: client.organization_id - organization.id

Ref: project.client_id > client.id  // many-to-one

// link table, many to many relations
//Ref: broker_consultant_lnk.consultant_id > consultant.id
//Ref: broker_consultant_lnk.consultant_broker_id > consultant_broker.id

//Ref: consultant_project_lnk.consultant_id > consultant.id
//Ref: consultant_project_lnk.project_id > project.id

Ref: timesheet.user_account_id > user_account.id                  // many-to-one
Ref: timesheet_entry.timesheet_id > timesheet.id        // many-to-one
Ref: timesheet_entry.project_id > project.id        // many-to-one
Ref: timesheet_summary.timesheet_id > timesheet.id      // many-to-one
Ref: invoice.timesheet_id - timesheet.id                // one-to-one
Ref: invoice_attachment.invoice_id > invoice.id         // many-to-one

// composite foreign key example
// Ref: ecommerce.merchant_periods.(merchant_id, country_code) > ecommerce.merchants.(id, country_code)
